[package]
name = "even_browser"
version = "0.1.0"
edition = "2024"

[dependencies]
native-tls = "0.2"
skia-safe = { version = "0.90.0", features = ["gl"] }
winit = { version = "0.30.12", features = ["rwh_06"] }
raw-window-handle = "0.6"
gl-rs = { version = "0.14.0", package = "gl" }
glutin = "0.32.0"
glutin-winit = "0.5.0"
